--- a/app/.env
+++ b/app/.env
@@ -4,3 +4,5 @@ DATABASE_ENDPOINT=inprintdb.c9tvpvq0q0hw.eu-west-3.rds.amazonaws.com
 DATABASE_NAME=inprintdb
 DATABASE_USER=postgres
 DATABASE_PASSWORD=Sa17031997!
+JWT_SECRET=inprintholaquetal
+
